# vps-compare

./: README.md  pyproject.toml
app/: .env.example
app/accounts/: models.py  urls.py  views.py
app/accounts/migrations/: 0001_initial.py
app/accounts/templates/: account_page.html  app_index.html  login_page.html
app/app/: settings.py  urls.py  views.py
app/commons/: environment_variables.py  tests.py  typing.py
app/home_page/templates/: home_page.html
app/jwt_authentication/: admin.py  auth_backends.py  jwt.py  models.py
app/jwt_authentication/migrations/: 0001_initial.py
app/vps_providers/: apps.py  models.py
app/vps_providers/migrations/: 0001_initial.py
